# pdm2nix

./: .pdm-python  pyproject.toml  result  shell.nix
pdm2nix/src/: cli.py  configuration.py
